test/errors/arrays/array_fill_size_mismatch_error.hy
// Declared size should match array literal length
int[3] arr = [1, 2]

int main()
{
    return arr[0]
}